--- a/src/app/features/dashboard/bom/bom.component.html
+++ b/src/app/features/dashboard/bom/bom.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point pt-1">
+<div class="page-start-point p-rem-t-0.25">
   <div class="p-l-10 p-r-10 p-b-10 min-height bom-main-style">
     <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product" [disableEditDelete]="true"></card-layout>
 
