--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -10,7 +10,7 @@
 <mat-accordion displayMode="flat" multi class="mat-table res-table" *ngIf="this.newMaterialData && this.newMaterialData.length > 0">
   <div class="res-td">
     <section matSort class="mat-elevation-z2 mat-header-row blue-background-color-color-white-section">
-      <span class="mat-header-cell mat-header-cell maxwidth-20 material material-Name" mat-sort-header="name" [ngClass]="isMobile ? 'text-center pl-1 pr-1' : ''"
+      <span class="mat-header-cell mat-header-cell maxwidth-20 material material-Name" mat-sort-header="name" [ngClass]="isMobile ? 'text-center p-rem-l-0.25 p-rem-r-0.25' : ''"
         >Material Name</span
       >
       <span class="mat-header-cell mat-header-cell maxwidth-20 material" mat-sort-header="estimatedQty" [ngClass]="isMobile ? 'text-center' : ''">Estimated Quantity</span>
