--- a/src/app/shared/components/adv-search-item/adv-search-item.component.html
+++ b/src/app/shared/components/adv-search-item/adv-search-item.component.html
@@ -13,7 +13,7 @@
         <div class="d-flex">
           <input
             formControlName="searchInput"
-            class="pl-3"
+            class="p-rem-l-1"
             #projectInput
             matInput
             focused="'true'"
