--- a/src/app/shared/dialogs/add-grn/add-material/add-material.component.html
+++ b/src/app/shared/dialogs/add-grn/add-material/add-material.component.html
@@ -108,7 +108,7 @@
       </ng-container>
     </div>
 
-    <div class="short-information pt-3">
+    <div class="short-information p-t-1-rem">
       <p class="light-grey fontsize-13-px">* Total amount and unit price are inclusive of GST</p>
     </div>
   </div>
