--- a/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
+++ b/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
@@ -3,7 +3,7 @@
     <!-- Receipt Number and Receipt Date Fields -->
     <div class="row">
       <div class="col-md-4 col-xs-6 display-flex align-items-center receipt-number">
-        <span class="text-semi-bold pr-3"> Receipt No. -</span>
+        <span class="text-semi-bold p-rem-r-1"> Receipt No. -</span>
 
         <mat-form-field class="border-input">
           <input matInput type="string" formControlName="grnNo" placeholder="Receipts No." class="m-r-5" />
@@ -24,7 +24,7 @@
     </div>
 
     <!-- Supplier details section -->
-    <div class="supplier-details pt-4">
+    <div class="supplier-details p-rem-t-1.5">
       <h5>Supplier's Details</h5>
 
       <div class="row">
