--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -30,7 +30,7 @@
         <div class="col-md-10 col-sm-10 col-xs-12 add-edit-form-dialog">
           <!-- first row -->
           <div class="row">
-            <div class="col-sm-12" [ngClass]="isMobile ? 'pl-2 p-r-0' : '' ">
+            <div class="col-sm-12" [ngClass]="isMobile ? 'p-rem-l-0.5 p-r-0' : '' ">
               <!-- project Name -->
               <mat-form-field class="border-input project-name-input w-100">
                 <mat-label>Project Name*</mat-label>
