--- a/src/app/shared/dialogs/select-project/select-project.component.html
+++ b/src/app/shared/dialogs/select-project/select-project.component.html
@@ -37,7 +37,7 @@
           <span aria-hidden="true">×</span>
         </button>
 
-        <div class="mx-auto text-center pt-4">
+        <div class="mx-auto text-center p-rem-t-1.5">
           <img src="assets/images/project-background.png" alt="No projects available" class="img-fluid" />
           <h5 class="mt-4">You haven't added any project yet.</h5>
           <h5 class="mb-3">Please add one to continue.</h5>
