--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -1,14 +1,14 @@
 <div class="dashboard app-dashboard">
-  <div class="container-fluid bg-gray pl-0 pr-3">
+  <div class="container-fluid bg-gray p-l-0 p-rem-r-1">
     <div class="row">
       <div class="col-md-12">
         <div class="row">
-          <div class="col-sm-12 pl-3 d-none">
+          <div class="col-sm-12 p-rem-l-1 d-none">
             <app-breadcrumb></app-breadcrumb>
           </div>
         </div>
         <div class="row m-t3">
-          <div class="col-sm-12 col-md-9 pl-3" [ngClass]="isMobile ? 'p-r-0' : ''">
+          <div class="col-sm-12 col-md-9 p-rem-l-1" [ngClass]="isMobile ? 'p-r-0' : ''">
             <div class="things-to-do bg-white mb-4 equal-height sml-d1">
               <!-- <h5 class="mb-3">Things to do</h5> -->
               <div class="things-to-do__inner d-flex justify-content-between align-items-center sml-db">
