--- a/src/app/features/dashboard/bom/bom-copy-materials/bom-copy-materials.component.html
+++ b/src/app/features/dashboard/bom/bom-copy-materials/bom-copy-materials.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point pt-1">
+<div class="page-start-point p-rem-t-0.25">
   <div class="p-l-10 p-r-10 p-b-10 copy-bom-materials-outer">
     <card-layout *ngIf="projectData" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2"> </card-layout>
 
