--- a/src/app/features/dashboard/bom/bom-edit-material/bom-edit-materials.component.html
+++ b/src/app/features/dashboard/bom/bom-edit-material/bom-edit-materials.component.html
@@ -1,73 +1,59 @@
-<div class="page-start-point pt-1">
-    <div class="p-l-10 p-r-10 p-b-10 copy-bom-materials-outer">
-        <card-layout *ngIf="projectData" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2">
-        </card-layout>
+<div class="page-start-point p-rem-t-0.25">
+  <div class="p-l-10 p-r-10 p-b-10 copy-bom-materials-outer">
+    <card-layout *ngIf="projectData" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2"> </card-layout>
 
-        <div class="row align-items-center copy-bom-small-screen">
-            <div class="col-xs-12 col-md-12 text-right copy-bom-button-action">
-                <button mat-raised-button class="main-background-color main-button color-white"
-                    (click)="update()">Update</button>
-            </div>
-        </div>
+    <div class="row align-items-center copy-bom-small-screen">
+      <div class="col-xs-12 col-md-12 text-right copy-bom-button-action">
+        <button mat-raised-button class="main-background-color main-button color-white" (click)="update()">Update</button>
+      </div>
+    </div>
 
-
-        <ng-container *ngIf="dataSource">
-
-            <div class="bom-details-table-div-part example-container mat-elevation-z8 mt-2 table-responsive">
-
-                <form [formGroup]="form">
-                    <table formArrayName="material" class="table mb-0 bg-white bom-material-table">
-                        <tr matSort class="mat-elevation-z2 mat-header-row background-color-skyblue">
-                            <th class="mat-header-cell">Material Name</th>
-                            <th class="mat-header-cell">Unit</th>
-                            <th class="mat-header-cell">Estimated Quantity</th>
-                            <th class="mat-header-cell">Estimated Rate</th>
-                        </tr>
-                        <tr *ngFor="let item of matData; let i = index" [formGroupName]="i">
-                            <td [ngClass]="isMobile ? 'font-size12' : '' ">{{ item.materialName }}</td>
-                            <td>
-                                <mat-form-field
-                                    class="border-select w-75 bom-unit-col mat-form-field-padding mat-form-field-flex-mm-padding">
-                                    <mat-select formControlName="materialUnit" placeholder="Unit">
-                                        <!-- <div class="display-flex border-bottom">
+    <ng-container *ngIf="dataSource">
+      <div class="bom-details-table-div-part example-container mat-elevation-z8 mt-2 table-responsive">
+        <form [formGroup]="form">
+          <table formArrayName="material" class="table mb-0 bg-white bom-material-table">
+            <tr matSort class="mat-elevation-z2 mat-header-row background-color-skyblue">
+              <th class="mat-header-cell">Material Name</th>
+              <th class="mat-header-cell">Unit</th>
+              <th class="mat-header-cell">Estimated Quantity</th>
+              <th class="mat-header-cell">Estimated Rate</th>
+            </tr>
+            <tr *ngFor="let item of matData; let i = index" [formGroupName]="i">
+              <td [ngClass]="isMobile ? 'font-size12' : ''">{{ item.materialName }}</td>
+              <td>
+                <mat-form-field class="border-select w-75 bom-unit-col mat-form-field-padding mat-form-field-flex-mm-padding">
+                  <mat-select formControlName="materialUnit" placeholder="Unit">
+                    <!-- <div class="display-flex border-bottom">
                                             <input #inpt class="p-l-10 p-b-5" matInput autocomplete="off" type="search"
                                                 placeholder="Search Unit" />
                                             <button mat-button mat-icon-button>
                                                 <mat-icon>search</mat-icon>
                                             </button>
                                         </div> -->
-                                        <mat-option *ngFor="let unit of materialUnits" [value]="unit">
-                                            <span>
-                                                {{ unit }}
-                                            </span>
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
-                            </td>
-                            <td>
-                                <mat-form-field
-                                    class="border-input widthZero mat-form-field-padding bom-same-width-col">
-                                    <mat-label>Estimated Quantity</mat-label>
-                                    <input matInput type="number" formControlName="estimatedQty"
-                                        [value]="item.estimatedQty">
-                                </mat-form-field>
-                            </td>
-                            <td>
-                                <mat-form-field
-                                    class="border-input widthZero mat-form-field-padding bom-same-width-col">
-                                    <mat-label>Estimated Rate</mat-label>
-                                    <input matInput type="number" formControlName="estimatedRate"
-                                        [value]="item.estimatedRate">
-                                </mat-form-field>
-                            </td>
-                        </tr>
-                    </table>
-
-                </form>
-
-            </div>
-
-        </ng-container>
-
-    </div>
+                    <mat-option *ngFor="let unit of materialUnits" [value]="unit">
+                      <span>
+                        {{ unit }}
+                      </span>
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </td>
+              <td>
+                <mat-form-field class="border-input widthZero mat-form-field-padding bom-same-width-col">
+                  <mat-label>Estimated Quantity</mat-label>
+                  <input matInput type="number" formControlName="estimatedQty" [value]="item.estimatedQty" />
+                </mat-form-field>
+              </td>
+              <td>
+                <mat-form-field class="border-input widthZero mat-form-field-padding bom-same-width-col">
+                  <mat-label>Estimated Rate</mat-label>
+                  <input matInput type="number" formControlName="estimatedRate" [value]="item.estimatedRate" />
+                </mat-form-field>
+              </td>
+            </tr>
+          </table>
+        </form>
+      </div>
+    </ng-container>
+  </div>
 </div>
