--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -6,7 +6,7 @@
           <form class="update-info__form" *ngIf="userInfoForm && users" [formGroup]="userInfoForm" (ngSubmit)="submit()">
             <div class="row">
               <div class="col-sm-12 col-md-12">
-                <h3 class="user-profile text-center text-uppercase pt-2 pb-4" *ngIf="users">{{ users.organizationName }}</h3>
+                <h3 class="user-profile text-center text-uppercase p-rem-t-0.5 p-rem-b-1.5" *ngIf="users">{{ users.organizationName }}</h3>
               </div>
 
               <div class="col-sm-12 col-md-6">
