--- a/src/app/features/grn/grn.component.html
+++ b/src/app/features/grn/grn.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point mt-5 pt-2 receipts-outer-section">
+<div class="page-start-point mt-5 p-rem-t-0.5 receipts-outer-section">
   <form *ngIf="allProjects" [formGroup]="form">
     <div class="row" class="users-dashboard p-b-20 min-height parent report">
       <!-- In case of WEB View - design for search Projects, Supplier, Generate Report and amount  -->
