--- a/src/app/features/po/initiate-po/initiate-po.component.html
+++ b/src/app/features/po/initiate-po/initiate-po.component.html
@@ -1,5 +1,5 @@
-<div class="page-start-point mt-5 pt-4" [ngClass]="isMobile ? 'm-popd' : ''">
-  <div class="p-b-20 min-height parent" [ngClass]="isMobile ? 'pl-2 pr-2' : 'p-l-20 p-r-20'">
+<div class="page-start-point mt-5 p-rem-t-1.5" [ngClass]="isMobile ? 'm-popd' : ''">
+  <div class="p-b-20 min-height parent" [ngClass]="isMobile ? 'p-rem-l-0.5 p-rem-r-0.5' : 'p-l-20 p-r-20'">
     <div class="row">
       <div class="col-xs-6"></div>
       <div class="col-xs-6"></div>
