--- a/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
+++ b/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
@@ -27,7 +27,7 @@
   <mat-accordion class="accordion-padding-zero" formArrayName="forms">
     <ng-template ngFor let-material [ngForOf]="checkedMaterialsList" let-mati="index">
       <mat-expansion-panel class="myPanel" [expanded]="true" [ngClass]="isMobile ? 'mt-2' : ''">
-        <mat-expansion-panel-header [ngClass]="isMobile ? 'fontsize-12-px pt-4 pb-4' : ''">
+        <mat-expansion-panel-header [ngClass]="isMobile ? 'fontsize-12-px p-rem-t-1.5 p-rem-b-1.5' : ''">
           <mat-panel-title>
             {{ material.projectName }}
             <!-- <a href="javascript:void(0)" class="main-color p-l-15"
