--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point pt-4">
+<div class="page-start-point p-rem-t-1.5">
   <div *ngIf="!poApprovalDetailsTemp && !poDraftedDetailsTemp && !acceptedRejectedPOListTemp && poCount === 0">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
       <div class="add-user-img">
@@ -152,7 +152,7 @@
           <ng-container *ngIf="(poApprovalDetailsTemp && permissionObj.poApprovalFlag) || poDraftedDetailsTemp || acceptedRejectedPOListTemp; else emptyReports">
             <div *ngIf="poApprovalDetailsTemp && permissionObj.poApprovalFlag">
               <mat-expansion-panel class="myPanel mb-2" [expanded]="true">
-                <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'pt-2 pb-2' : ''">
+                <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'p-rem-t-0.5 p-rem-b-0.5' : ''">
                   <mat-panel-title> P.O. For Approval </mat-panel-title>
                 </mat-expansion-panel-header>
 
@@ -218,7 +218,7 @@
 
             <div *ngIf="poDraftedDetailsTemp">
               <mat-expansion-panel class="myPanel mb-2" [expanded]="true">
-                <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'pt-2 pb-2' : ''">
+                <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'p-rem-t-0.5 p-rem-b-0.5' : ''">
                   <mat-panel-title> Drafted P.O. </mat-panel-title>
                 </mat-expansion-panel-header>
 
@@ -280,7 +280,7 @@
 
             <div *ngIf="acceptedRejectedPOListTemp">
               <mat-expansion-panel class="myPanel mb-2" [expanded]="true">
-                <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'pt-2 pb-2' : ''">
+                <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'" [ngClass]="isMobile ? 'p-rem-t-0.5 p-rem-b-0.5' : ''">
                   <mat-panel-title>
                     <div class="col-xs-5 text-left approved">Approved P.O.</div>
                     <!-- <div class="col-xs-7 text-right grn-note">
@@ -373,7 +373,7 @@
           <ng-template #emptyReports>
             <div class="d-block text-align-center mt-3">
               <img src="../../../../assets/images/empty-report.svg" alt="empty report" />
-              <p class="font-weight-light m-0 pt-3"><strong class="font-weight500">Oops!</strong> You have nothing to see.</p>
+              <p class="font-weight-light m-0 p-t-1-rem"><strong class="font-weight500">Oops!</strong> You have nothing to see.</p>
               <p class="font-weight-light m-0 mt-1">Try Again !</p>
             </div>
           </ng-template>
