--- a/src/app/shared/components/subscriptions/subscriptions.component.html
+++ b/src/app/shared/components/subscriptions/subscriptions.component.html
@@ -25,11 +25,11 @@
                     <span class="font-size-12 font-weight500 mt-2">(MY PLAN)</span>
                   </ng-container>
                 </mat-card-title>
-                <mat-card-subtitle class="text-left pl-5">
+                <mat-card-subtitle class="text-left p-rem-l-3">
                   <div class="row">
                     <div class="col-xs-9">
                       <ng-container *ngIf="plan.planName !== 'Custom'; else cstmSts">
-                        <div class="pt-2 pb-3">
+                        <div class="p-rem-t-0.5 p-b-1-rem">
                           <ng-container *ngIf="subscription.discountPercent !== null; else flatPrice">
                             <span class="line-through reg-price height-30-px">{{ plan.currencyCode }} {{ plan.planUnitPrice }}</span>
                             <span class="d-flex">
@@ -57,7 +57,7 @@
                       </ng-container>
                       <ng-template #cstmSts>
                         <span class="height-30-px d-block w-100">&nbsp;</span>
-                        <div class="pl-2 pt-3">
+                        <div class="p-rem-l-0.5 p-t-1-rem">
                           <strong>Get in touch with us for a price quote</strong>
                         </div>
                       </ng-template>
@@ -132,7 +132,7 @@
                   <span class="material-icons float-right mt-2"> keyboard_arrow_down </span>
                 </button>
               </ng-container>
-              <mat-card-actions class="feat-list pl-4 pb-3" [ngClass]="isMobile ? 'f-hide' : ''">
+              <mat-card-actions class="feat-list p-rem-l-1.5 p-b-1-rem" [ngClass]="isMobile ? 'f-hide' : ''">
                 <ul>
                   <li *ngFor="let feature of sortFeaturesObjList(plan.planFeatureObjList)" [ngClass]="feature.available ? 'active' : 'inactive'">
                     <ng-container *ngIf="feature.available; else notAvailable">
