--- a/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
+++ b/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
@@ -24,7 +24,7 @@
             </mat-form-field>
           </div>
 
-          <div class="col-xs-12 display-flex supplier-dialog pl-0 pr-0">
+          <div class="col-xs-12 display-flex supplier-dialog p-l-0 p-r-0">
             <div class="col-xs-4 col-md-2">
               <mat-form-field class="border-select mat-form-field-flex-mm-padding">
                 <mat-select formControlName="countryCode">
