--- a/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
+++ b/src/app/shared/dialogs/issue-to-indent/issue-to-indent-dialog.html
@@ -9,7 +9,7 @@
 
     <div mat-dialog-content>
       <div class="modal-body">
-        <div class="row pb-3">
+        <div class="row p-b-1-rem">
           <div class="col-md-6 text-center" matTooltip="{{issueToIndentDetails.materialName}}">
             <span>{{issueToIndentDetails.materialName}}</span>
           </div>
