--- a/src/app/shared/dialogs/selectrfq-terms/selectrfq-terms.component.html
+++ b/src/app/shared/dialogs/selectrfq-terms/selectrfq-terms.component.html
@@ -5,18 +5,16 @@
 
   <div mat-dialog-content>
     <div class="modal-body">
-
       <form *ngIf="rfqTerms.length" [formGroup]="termsForm" ((ngSubmit)="submitRfq()">
         <div class="row">
           <div class="col-xs-12">
             <ng-container *ngFor="let term of rfqTerms">
-
               <mat-radio-group name="term" aria-labelledby="example-radio-group-label" class="display-block" formControlName="term">
                 <mat-radio-button class="example-radio-button" [value]="term" (change)="change(term.termsDesc)">
                   {{ term.termsDesc }}
                 </mat-radio-button>
 
-                <form [formGroup]="customTermForm" class="display-inline-block pl-3">
+                <form [formGroup]="customTermForm" class="display-inline-block p-rem-l-1">
                   <mat-form-field *ngIf="term.termsDesc.trim() === 'Others'" class="border-input main-color other-terms-input">
                     <input matInput formControlName="customTerm" type="text" placeholder="Add Custom Term" />
                   </mat-form-field>
@@ -32,9 +30,7 @@
             <button mat-raised-button class="main-background-color main-button color-white" (click)="submitRfq()">Next</button>
           </div>
         </div>
-
       </form>
     </div>
   </div>
 </section>
-
