users and supplier page changes

--- a/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
+++ b/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
@@ -13,6 +13,7 @@
           <div class="col-xs-12 display-flex supplier-dialog">
             <mat-form-field class="border-input add-supplier-name">
               <input matInput type="text" formControlName="supplier_name" placeholder="Supplier Name *" />
+              <mat-error class="form-error-msg p-t-10">Supplier name is Required</mat-error>
             </mat-form-field>
           </div>
 
