--- a/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
+++ b/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
@@ -40,15 +40,8 @@
             <mat-form-field class="border-select mat-form-field-flex-mm-padding">
               <mat-select formControlName="countriesList">
                 <div class="display-flex">
-                  <input
-                    class="p-l-10 p-b-5"
-                    matInput
-                    type="search"
-                    placeholder="Search Country"
-                    [(ngModel)]="searchCountry"
-                    [ngModelOptions]="{standalone: true}"
-                    (keydown)="$event.stopPropagation()"
-                  />
+                  <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Country" [(ngModel)]="searchCountry" 
+                  [ngModelOptions]="{standalone: true}" (keydown)="$event.stopPropagation()"/>
                   <button mat-button matSuffix mat-icon-button>
                     <mat-icon>search</mat-icon>
                   </button>
@@ -86,8 +79,10 @@
               <mat-select formControlName="roleId">
                 <mat-option *ngFor="let role of allRoles" [value]="role.roleId"> {{role.roleDescription}} </mat-option>
               </mat-select>
+              <mat-error class="mat-error-add-edit-form-modal p-t-20">Role is Required</mat-error>
             </mat-form-field>
           </div>
+          
           <!-- Project Dropdown Field -->
           <div class="col-md-6 col-sm-6 col-xs-12">
             <mat-form-field class="border-select projects-field add-edit-user-form-modal">
