--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -189,8 +189,7 @@
 
 .select-address-tag {
   float: left;
-  width: auto;
-  padding-left: 28px;
+  // padding-left: 28px;
   font-size: 14px;
   color: #f47721;
   text-decoration: underline;
@@ -199,7 +198,6 @@
 }
 .select-address-tag-disabled {
   float: left;
-  width: auto;
   padding-left: 28px;
   font-size: 14px;
   color: #d0d0dd;
@@ -208,7 +206,7 @@
 }
 .reset-form-tag {
   float: right;
-  width: 24%;
+  // width: 24%;
   font-size: 14px;
   color: #f47721;
   font-weight: 550;
