--- a/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
@@ -5,15 +5,15 @@
       <div class="submit-bid-div-add">
         <form *ngIf="form" [formGroup]="form">
           <!-- new structure -->
-          <div class="col-sm-12">
-            <div class="supplier-details-heading-add-address">
+          <div class="col-sm-12 pl-4 pr-4">
+            <div class="supplier-details-heading-add-address text-center">
               Supplier Details
             </div>
             <!-- first row -->
             <div class="row">
               <div class="col-sm-6">
                 <!-- project Name -->
-                <mat-form-field class="border-input add-edit-user-form-modal">
+                <mat-form-field class="border-input w-100">
                   <input matInput type="text" placeholder="Contact Person" formControlName="supplierName" required />
                   <mat-error class="mat-error-add-edit-form-modal">Supplier Name is Required</mat-error>
                 </mat-form-field>
@@ -21,7 +21,7 @@
 
               <div class="col-sm-6">
                 <!-- address 1 -->
-                <mat-form-field class="border-input add-edit-user-form-modal">
+                <mat-form-field class="border-input w-100">
                   <input matInput type="number" placeholder="Phone No" formControlName="contactNo" required />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">contactNo is Required</mat-error> -->
                   <small *ngIf="form.controls['contactNo'].hasError('required') && form.controls['contactNo'].touched"
@@ -36,7 +36,7 @@
             <div class="row">
               <div class="col-sm-6">
                 <!-- address 1 -->
-                <mat-form-field class="border-input add-edit-user-form-modal">
+                <mat-form-field class="border-input w-100">
                   <input matInput type="text" placeholder="Email Id" formControlName="email" required />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">Email Id is Required</mat-error> -->
                   <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched"
@@ -48,7 +48,7 @@
 
               <div class="col-sm-6">
                 <ng-container *ngIf="isInternational === 0; else noInt">
-                  <mat-form-field class="border-input add-edit-user-form-modal">
+                  <mat-form-field class="border-input w-100">
                     <input matInput type="text" placeholder="GST No" formControlName="gstNo" required />
                     <!-- <mat-error class="mat-error-add-edit-form-modal">contactNo is Required</mat-error> -->
                     <small *ngIf="form.controls['gstNo'].hasError('required') && form.controls['gstNo'].touched"
@@ -58,7 +58,7 @@
                   </mat-form-field>
                 </ng-container>
                 <ng-template #noInt>
-                  <mat-form-field class="border-input add-edit-user-form-modal">
+                  <mat-form-field class="border-input w-100">
                     <input matInput type="text" placeholder="GST No" formControlName="gstNo" />
                     <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched"
                       class="form-error-msg"> Enter Valid GST No</small>
@@ -83,7 +83,7 @@
             <div class="row p-t-20">
               <div class="col-sm-6">
                 <!-- PinCode -->
-                <mat-form-field class="border-input add-edit-user-form-modal">
+                <mat-form-field class="border-input w-100">
                   <input matInput type="text" placeholder="Address Line1" #FormaddressLine1
                     formControlName="addressLine1" required />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">addressLine1 is Required</mat-error> -->
@@ -101,7 +101,7 @@
 
               <div class="col-sm-6">
                 <!-- PinCode -->
-                <mat-form-field class="border-input add-edit-user-form-modal">
+                <mat-form-field class="border-input w-100">
                   <input matInput type="text" placeholder="Address Line2" #FormaddressLine2
                     formControlName="addressLine2" />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">addressLine2 is Required</mat-error> -->
@@ -125,7 +125,7 @@
             <div class="row">
               <div class="col-sm-6">
                 <!-- country -->
-                <mat-form-field class="border-select mat-form-field-flex-mm-padding w-100 pl-4 pr-4 ml-1">
+                <mat-form-field class="border-select mat-form-field-flex-mm-padding w-100">
                   <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
                     <div class="display-flex">
                       <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Country"
@@ -158,7 +158,7 @@
 
               <div class="col-sm-6">
                 <!-- PinCode -->
-                <mat-form-field class="border-input add-edit-user-form-modal">
+                <mat-form-field class="border-input w-100">
                   <input matInput type="text" placeholder="Pincode" #pincode formControlName="pinCode"
                     (input)="getPincode($event)" required />
                   <small *ngIf="form.controls['pinCode'].hasError('required') && form.controls['pinCode'].touched"
@@ -176,7 +176,7 @@
             <div class="row">
               <div class="col-sm-6">
                 <!-- PinCode -->
-                <mat-form-field class="border-input add-edit-user-form-modal">
+                <mat-form-field class="border-input w-100">
                   <input matInput type="text" placeholder="City" formControlName="city" required />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">city is Required</mat-error> -->
                   <small *ngIf="form.controls['city'].hasError('required') && form.controls['city'].touched"
@@ -188,7 +188,7 @@
 
               <div class="col-sm-6">
                 <!-- PinCode -->
-                <mat-form-field class="border-input add-edit-user-form-modal">
+                <mat-form-field class="border-input w-100">
                   <input matInput type="text" placeholder="State" formControlName="state" required />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">state is Required</mat-error> -->
                   <small *ngIf="form.controls['state'].hasError('required') && form.controls['state'].touched"
@@ -205,7 +205,7 @@
           <!-- end structure -->
 
           <div mat-dialog-actions>
-            <div class="col-sm-12 save-btn-add-edit-user-modal rfq-bid-address">
+            <div class="col-sm-12 save-btn-add-edit-user-modal rfq-bid-address mt-4">
               <button mat-raised-button [disabled]="disabledAddress ? false : validPincode ? !form.valid : true"
                 (click)="saveAddress()" class="main-background-color main-button color-white pull-right">
                 Submit
